[project]
name = "comfyui-qaishelper"
description = "first 'real' push"
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/QaisMalkawi/ComfyUI-QaisHelper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "qais-malkawi"
DisplayName = "ComfyUI-QaisHelper"
Icon = ""
